# fasthtmx

./: Makefile  README.md  pyproject.toml
app/: main.py
app/models/: models.py
app/schema/: schema.py
app/services/: db_service.py
app/templates/books/partials/: add_books_form.html  search_results.html
app/templates/shared/: _layout.html
app/viewmodels/authors/: addauthorviewmodel.py  authorbooks.py  showauthors.py
app/viewmodels/books/: addbookviewmodel.py  searchbooks.py  showbooks.py
app/viewmodels/home/: homeviewmodel.py
