[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastApi-Htmx boilerplate"
authors = ["sanix-darker <s4nixd@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
Jinja2 = "^3.1.2"
SQLAlchemy = "^2.0.24"
uvicorn = "^0.25.0"
pydantic = "^2.5.3"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.9"
mypy = "^1.8.0"
toml = "^0.10.2"
coverage = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
